--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,31 @@
 @import './fonts.scss';
 @import './variables.scss';
 
+#root {
+  font-family: $font-primary;
+  font-weight: 400;
+  min-width: 375px;
+  max-width: 500px;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  background-color: black;
+  color: white;
+}
+
 body {
-  font-family: $font-primary; /* 기본 폰트 */
-  font-weight: 400; /* Regular */
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
+}
+
+.mainBottom {
+  position: fixed;
+  min-width: 375px;
+  max-width: 500px;
+  width: 100%;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 0);
 }
