--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,10 +7,9 @@
   min-width: 375px;
   max-width: 500px;
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
+
   margin: 0 auto;
-  background-color: black;
+  background-color: rgba(6, 2, 3, 1);
   color: white;
 }
 
