--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,8 +1,13 @@
+.loginContainer {
+  display: flex;
+  flex-direction: column;
+}
+
 .loginBottom {
   display: flex;
   flex-direction: column;
   gap: 20px;
   align-items: center;
   justify-content: flex-start;
-  padding-top: 40px;
+  padding-top: 20px;
 }
