--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -15,32 +15,48 @@
   justify-content: center;
   min-height: 100vh;
 
-  .info {
-    line-height: 22px;
+  .header {
+    margin: 20px 0 40px 0;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .subHeader {
     font-size: 14px;
-    color: #aeaeb2;
-    margin-bottom: 45px;
+    line-height: 26px;
+    color: #6f76ff;
   }
 }
 
 // listUp
 .listUp {
+  padding: 20px;
   min-height: 100vh;
 
   .candidateBox {
     display: grid;
-    grid-template-columns: 2fr;
+    grid-template-columns: repeat(2, 2fr);
+    gap: 40px 10px;
+  }
+
+  .header {
+    margin: 10px 0 30px 0;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .subHeader {
+    margin-top: 50px;
+    background-color: #6f76ff;
+    color: #6f76ff;
+    width: 20px;
+    height: 3px;
   }
 }
 
-.subHeader {
+.info {
+  line-height: 22px;
   font-size: 14px;
-  line-height: 26px;
-  color: #6f76ff;
-}
-
-.Header {
-  margin: 20px 0 45px 0;
-  font-size: 28px;
-  font-weight: bold;
+  color: #aeaeb2;
+  margin-bottom: 40px;
 }
