--- a/src/components/VotingTable/VotingTable.module.scss
+++ b/src/components/VotingTable/VotingTable.module.scss
@@ -1,6 +1,6 @@
 .votingTableContainer {
   border-radius: 4px;
-  padding: 0 20px;
+  padding: 5px 15px;
   background-color: rgba(255, 255, 255, 0.05);
 }
 
