Feat: profile detail

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -4,8 +4,9 @@
   border: 0.5px solid rgba($color: #dbdbdb, $alpha: 0.8);
   background-color: rgba($color: #fff, $alpha: 0.12);
   border-radius: 8px;
-  width: 328px;
+  width: 85%;
   box-sizing: border-box;
+  margin-bottom: 30px;
 }
 
 .inputBox {
