--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -4,8 +4,8 @@
 }
 
 .loginBottom {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   gap: 20px;
   align-items: center;
   justify-content: flex-start;
