--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,3 +28,11 @@ body {
   bottom: 0;
   transform: translate(-50%, 0);
 }
+
+.copyRight {
+  color: rgba(248, 248, 252, 1);
+  padding: 40px;
+  text-align: center;
+  font-size: 10px;
+  //TODO 폰트 변경 필요
+}
