--- a/src/components/MainButton/MainButton.module.scss
+++ b/src/components/MainButton/MainButton.module.scss
@@ -1,16 +1,19 @@
 @import '/src/styles/variables.scss';
 
 .mainBtnBox {
-  display: flex;
-  justify-content: center;
-  margin: 10px auto;
+  // display: flex;
+  // justify-content: center;
+  text-align: center;
+  padding-bottom: 20px;
 }
 
 .mainBtn {
   background-color: $primary-color;
   color: $text-color;
-  width: 328px;
-  height: 48px;
-  border-radius: 999px;
+  font-size: 16px;
+  font-weight: bold;
   border: none;
+  width: 90%;
+  padding: 0.8rem;
+  border-radius: 999px;
 }
