--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -11,3 +11,31 @@
   justify-content: flex-start;
   padding-top: 20px;
 }
+
+.inputBox {
+  margin: 0 auto;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+
+  .input {
+    color: white;
+    padding: 16px 20px;
+    border: 0.5px solid rgba($color: #dbdbdb, $alpha: 0.8);
+    background-color: rgba($color: #fff, $alpha: 0.12);
+    border-radius: 8px;
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+  .errorMessage {
+    color: red;
+    font-size: 11px;
+    align-self: flex-start;
+    padding: 10px 0 0 10px;
+  }
+}
