--- a/src/components/Candidate/Candidate.module.scss
+++ b/src/components/Candidate/Candidate.module.scss
@@ -1,7 +1,12 @@
 .candidate {
+  .candidateBox {
+    cursor: pointer;
+    background-color: inherit;
+    border: none;
+    width: 100%;
+  }
   .candidateImage {
     width: 100%;
-    margin-bottom: 15px;
     background-color: inherit;
     border: none;
 
@@ -11,11 +16,13 @@
   }
 
   .candidateInfo {
+    margin: 8px 0 3px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     .name {
+      color: white;
       font-size: 16px;
     }
 
