--- a/src/components/MainButton/MainButton.module.scss
+++ b/src/components/MainButton/MainButton.module.scss
@@ -3,29 +3,40 @@
 .mainBtnBox {
   text-align: center;
   padding-bottom: 20px;
-}
 
-.mainBtn {
-  position: relative;
-  font-size: 16px;
-  font-weight: bold;
-  border: none;
-  width: 90%;
-  padding: 1rem;
-  border-radius: 999px;
-}
+  .mainBtn {
+    position: relative;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    width: 90%;
+    padding: 1rem;
+    border-radius: 999px;
 
-.voted {
-  color: $primary-color;
-  background-color: $text-color;
-}
+    .votedStyle {
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-.notVoted {
-  cursor: pointer;
-  background-color: $primary-color;
-  color: $text-color;
-}
+      img {
+        height: 23px;
+        margin-right: 3px;
+      }
+    }
+  }
 
-.mainPadding {
-  padding: 0.4rem;
+  .voted {
+    color: $primary-color;
+    background-color: $text-color;
+  }
+
+  .notVoted {
+    cursor: pointer;
+    background-color: $primary-color;
+    color: $text-color;
+  }
+
+  .mainPadding {
+    padding: 0.4rem;
+  }
 }
