--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -36,3 +36,14 @@ body {
   font-size: 10px;
   //TODO 폰트 변경 필요
 }
+
+.swiper-pagination-bullet {
+  background-color: rgba(255, 255, 255, 0.5) !important; /* 기본 색상 */
+  opacity: 0.7;
+  transition: background-color 0.3s ease;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: rgba(66, 50, 213, 1) !important; /* 활성화된 색상 */
+  opacity: 1;
+}
