Design: font, loading-spinners etc
폰트변경, 로딩시 스피너 추가 및 디자인 디테일 수정

--- a/src/components/MainButton/MainButton.module.scss
+++ b/src/components/MainButton/MainButton.module.scss
@@ -5,6 +5,8 @@
   padding-bottom: 20px;
 
   .mainBtn {
+    font-family: 'Kantumruy Pro', serif;
+    font-weight: 600;
     position: relative;
     font-size: 16px;
     font-weight: bold;
@@ -19,7 +21,7 @@
       align-items: center;
 
       img {
-        height: 23px;
+        height: 20px;
         margin-right: 3px;
       }
     }
