--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -31,6 +31,7 @@
       .title {
         font-size: 14px;
         color: #7c7c7c;
+        font-weight: 600;
       }
       .content {
         margin-top: 8px;
