--- a/src/components/Candidate/Candidate.module.scss
+++ b/src/components/Candidate/Candidate.module.scss
@@ -20,6 +20,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Kantumruy Pro', serif;
+    font-weight: 400;
 
     .name {
       color: white;
