--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -5,17 +5,17 @@
   max-width: 500px;
   margin: 0 auto;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.7); // 반투명 배경
-  z-index: 50; // 모달의 우선순위를 높이기 위해
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 50;
   display: flex;
-  align-items: center; // 수직 중앙 정렬
-  justify-content: center; // 수평 중앙 정렬
+  align-items: center;
+  justify-content: center;
 }
 
 .modalBox {
   color: black;
   background-color: white;
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
   border-radius: 8px;
   text-align: center;
@@ -25,15 +25,19 @@
     flex-direction: column;
     padding: 20px;
     border-bottom: 1px solid rgba(229, 229, 234, 1);
-
+    font-size: 15px;
+    font-weight: 200;
     span:first-child {
       font-size: 18px;
-      font-weight: 900;
+      font-weight: 500;
       margin-bottom: 10px;
     }
   }
 
   .confirmBtn {
+    border-radius: 8px;
+    width: 100%;
+    font-size: 15px;
     cursor: pointer;
     color: rgba(66, 50, 213, 1);
     padding: 13px;
