--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,28 +1,23 @@
 @import './variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@100..700&display=swap');
 
-/* 폰트 웨이트 클래스 */
-.poppins-thin {
-  font-family: $font-primary;
-  font-weight: 100;
+.kantumruy-pro-regular {
+  font-family: 'Kantumruy Pro', serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Regular weight */
+  font-style: normal;
 }
 
-.poppins-light {
-  font-family: $font-primary;
-  font-weight: 300;
+.kantumruy-pro-bold {
+  font-family: 'Kantumruy Pro', serif;
+  font-optical-sizing: auto;
+  font-weight: 600; /* Bold weight */
+  font-style: normal;
 }
 
-.poppins-regular {
-  font-family: $font-primary;
-  font-weight: 400;
-}
-
-.poppins-medium {
-  font-family: $font-primary;
-  font-weight: 500;
-}
-
-.poppins-bold {
-  font-family: $font-primary;
-  font-weight: 700;
+.kantumruy-pro-light {
+  font-family: 'Kantumruy Pro', serif;
+  font-optical-sizing: auto;
+  font-weight: 200; /* Light weight */
+  font-style: normal;
 }
