Fix: modal 구현방법 변경
기존 > 3명에게 투표를 완료했을 때 마지막으로 완료 모달창을 띄움
변경 > 1명에게 투표할 때마다 투표 완료 모달창을 띄움

기존 > 로그인 시 3명에게 이미 투표를 완료했다면 모달창 띄워진 후 로그인 화면으로 이동
변경 > 로그인 시 3명에게 이미 투표 완료를 한 상태여도 모달창 띄워지지 않고 메인화면 그대로 보여짐

--- a/src/components/MainButton/MainButton.module.scss
+++ b/src/components/MainButton/MainButton.module.scss
@@ -33,12 +33,15 @@
   }
 
   .notVoted {
-    cursor: pointer;
     background-color: $primary-color;
     color: $text-color;
   }
 
   .mainPadding {
     padding: 0.4rem;
+  }
+
+  .cursor {
+    cursor: pointer;
   }
 }
